--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           local-dir: ./         # Root of your repo
-          server-dir: /htdocs/my_app  # Your custom folder
+          server-dir: /htdocs/my_app/  # Your custom folder
           exclude: |
             **/.git*
             **/.git*/**
