--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,28 +1,28 @@
-name: Deploy CodeIgniter4 to Host
+name: 🚀 Deploy CodeIgniter 4.5 to Host
 
 on:
   push:
     branches:
-      - main  # Adjust to your default branch
+      - main
 
 jobs:
   ftp-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - name: Sync Files via FTP
-        uses: SamKirkland/FTP-Deploy-Action@v4.3.6
+      - name: Upload entire project via FTP
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.5
         with:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          local-dir: ./         # Root of your repo
-          server-dir: /htdocs/my_app/  # Your custom folder
+          protocol: ftp
+          port: 21
+          local-dir: ./           # local root of your project
+          server-dir: /htdocs/my_app/    # upload everything into htdocs
           exclude: |
             **/.git*
-            **/.git*/**
-            **/node_modules/**
-            .env
-            writable/
+            **/.github*
+            **/tests*
